Added Styles to Personal Info Section

--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
                 <div id = "buttons" class = "container">
 
                     <div id = "previous-button" class = "button-div">
-                        <img src = "resources/Buttons/previous.svg" class = "button-img" type = "button" onclick = "previousSection">
+                        <img src = "resources/Buttons/previous.svg" class = "button-img" type = "button" onclick = "previousSection();">
                         <input type="button" id = "">
                     </div>
 
                     <div id = "submit-button" class = "button-div">
-                        <img src = "resources/Buttons/submit.svg" class = "button-img" type = "button" onclick = "checkFormOk">
+                        <img src = "resources/Buttons/submit.svg" class = "button-img" type = "button" onclick = "submitForm();">
                         <input type="submit" id = "submit">
                     </div>
 
                     <div id = "next-button" class = "button-div">
-                        <img src = "resources/Buttons/next.svg" class = "button-img" type = "button" onclick = "nextSection">
+                        <img src = "resources/Buttons/next.svg" class = "button-img" type = "button" onclick = "nextSection();">
                         <input type="button" id = "">
                     </div>
 
@@ -76,5 +76,9 @@
     </body>
 
     <script src = "tests/bundle.js"></script>
+    <script src = "bootstrap/jquery-3.5.1.min.js"></script>
+    <script src = "main.js"></script>
+
+
 
 </html>
