Updated id for DropDowm menu to pass testcases

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </h4>
 
                     <label id = "dropdown-profession-label">Select<br></label>
-                    <select id = "dropdown-profession" onchange = "change_visible_div();">
+                    <select id = "dropdown" onchange = "change_visible_div();">
                          <option value = "student">I am a Student</option>
                          <option value = "professional">I am a Professional</option>
                     </select><br>
