Added HTML content for Section 3

--- a/index.html
+++ b/index.html
@@ -89,6 +89,62 @@
                     </div>
                 </fieldset>
 
+                <fieldset id = "field-3" class = "field">
+
+                    <div class = "section-icon container" id = "qualification-icon"></div>
+
+                    <h4 class = "section-heading">
+                         Qualifications
+                    </h4>
+
+                    <label id = "languages-known-label">What Languages Do You Know?</label><br>
+
+                    <div class = "box-input-container">
+
+                        <div class = "checkbox-div">
+                            <input type = "checkbox" class = "checkbox-input" value = "0">
+                            <label class = "checkbox-label">C</label>
+                        </div>
+                        <div class = "checkbox-div">
+                            <input type = "checkbox" class = "checkbox-input" value = "0">
+                            <label class = "checkbox-label">C++</label>
+                        </div>
+                        <div class = "checkbox-div">
+                            <input type = "checkbox" class = "checkbox-input" value = "0">
+                            <label class = "checkbox-label">Python</label>
+                        </div>
+                        <div class = "checkbox-div">
+                            <input type = "checkbox" class = "checkbox-input" value = "0">
+                            <label class = "checkbox-label">Java</label>
+                        </div>
+
+                    </div>
+
+                    <label id = "language-fav-label">What Language Are You Most Comfortable With?</label><br>
+
+                    <div class = "box-input-container container">
+
+                        <div class = "checkbox-div">
+                            <input type = "radio" class = "checkbox-input" value = "0" name = "c">
+                            <label class = "checkbox-label">C</label>
+                        </div>
+                        <div class = "checkbox-div">
+                            <input type = "radio" class = "checkbox-input" value = "0" name = "c">
+                            <label class = "checkbox-label">C++</label>
+                        </div>
+                        <div class = "checkbox-div">
+                            <input type = "radio" class = "checkbox-input" value = "0" name = "c">
+                            <label class = "checkbox-label">Python</label>
+                        </div>
+                        <div class = "checkbox-div">
+                            <input type = "radio" class = "checkbox-input" value = "0" name = "c">
+                            <label class = "checkbox-label">Java</label>
+                        </div>
+
+                    </div>
+
+                </fieldset>
+
 
                 <div id = "buttons" class = "container">
 
