--- a/index.html
+++ b/index.html
@@ -102,23 +102,23 @@
                     <div class = "box-input-container">
 
                         <div class = "checkbox-div">
-                            <input type = "checkbox" class = "checkbox-input" value = "0">
-                            <label class = "checkbox-label">C</label>
+                            <input type = "checkbox" id = "custom-checkbox-1" value = "0"/>
+                            <label class = "checkbox-label" for = "custom-checkbox-1">C</label>
                         </div>
                         <div class = "checkbox-div">
-                            <input type = "checkbox" class = "checkbox-input" value = "0">
-                            <label class = "checkbox-label">C++</label>
+                            <input type = "checkbox" id = "custom-checkbox-2" value = "0"/>
+                            <label class = "checkbox-label" for = "custom-checkbox-2">C++</label>
                         </div>
                         <div class = "checkbox-div">
-                            <input type = "checkbox" class = "checkbox-input" value = "0">
-                            <label class = "checkbox-label">Python</label>
+                            <input type = "checkbox" id = "custom-checkbox-3" value = "0"/>
+                            <label class = "checkbox-label" for = "custom-checkbox-3">Python</label>
                         </div>
                         <div class = "checkbox-div">
-                            <input type = "checkbox" class = "checkbox-input" value = "0">
-                            <label class = "checkbox-label">Java</label>
+                            <input type = "checkbox" id = "custom-checkbox-4" value = "0"/>
+                            <label class = "checkbox-label" for = "custom-checkbox-4">Java</label>
                         </div>
 
-                    </div>
+                    </div><br>
 
                     <label id = "language-fav-label">What Language Are You Most Comfortable With?</label><br>
 
