Added design for custom radio button

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                          Qualifications
                     </h4>
 
-                    <label id = "languages-known-label">What Languages Do You Know?</label><br>
+                    <label id = "languages-label">What Languages Do You Know?</label><br>
 
                     <div class = "box-input-container">
 
@@ -120,25 +120,25 @@
 
                     </div><br>
 
-                    <label id = "language-fav-label">What Language Are You Most Comfortable With?</label><br>
+                    <label id = "languages-label">What Language Are You Most Comfortable With?</label><br>
 
                     <div class = "box-input-container container">
 
                         <div class = "checkbox-div">
-                            <input type = "radio" class = "checkbox-input" value = "0" name = "c">
-                            <label class = "checkbox-label">C</label>
+                            <input type = "radio" id = "radio-1" value = "0" name = "c">
+                            <label class = "checkbox-label" for = "radio-1">C</label>
                         </div>
                         <div class = "checkbox-div">
-                            <input type = "radio" class = "checkbox-input" value = "0" name = "c">
-                            <label class = "checkbox-label">C++</label>
+                            <input type = "radio" id = "radio-2" value = "0" name = "c">
+                            <label class = "checkbox-label" for = "radio-2">C++</label>
                         </div>
                         <div class = "checkbox-div">
-                            <input type = "radio" class = "checkbox-input" value = "0" name = "c">
-                            <label class = "checkbox-label">Python</label>
+                            <input type = "radio" id = "radio-3" value = "0" name = "c">
+                            <label class = "checkbox-label" for = "radio-3">Python</label>
                         </div>
                         <div class = "checkbox-div">
-                            <input type = "radio" class = "checkbox-input" value = "0" name = "c">
-                            <label class = "checkbox-label">Java</label>
+                            <input type = "radio" id = "radio-4" value = "0" name = "c">
+                            <label class = "checkbox-label" for = "radio-4">Java</label>
                         </div>
 
                     </div>
