Added design for Section 4 and JS checks

--- a/index.html
+++ b/index.html
@@ -145,6 +145,20 @@
 
                 </fieldset>
 
+                <fieldset id = "field-4" class = "field">
+
+                    <div class = "section-icon container" id = "coding-icon"></div>
+
+                    <h4 class = "section-heading">
+                         Coding Skills
+                    </h4>
+
+                    <div id = "coding-question" class = "container">
+                        <p>Write a program in your language of choice, to generate all combinations of an array.</p>
+                        <textarea></textarea>
+                    </div>
+
+                </fieldset>
 
                 <div id = "buttons" class = "container">
 
