--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> Survey Form </title>
 
         <meta http-equiv="CONTENT-TYPE" content="text/html" charset="UTF-8">
-        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, shrink-to-fit = no">
 
         <link rel = "stylesheet" type = "text/css" href = "bootstrap/bootstrap.min.css">
         <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">-->
@@ -12,7 +12,7 @@
 
     </head>
 
-    <body id = "page">
+    <body id = "page" onload = "setup();">
 
         <div id = "main" class = "container">
 
@@ -32,20 +32,20 @@
 
                 <fieldset id = "field-1" class = "field">
 
-                    <div class = "section-icon container" id = "personal-info-icon"></div>
+                    <div class = "section-icon container img-responsive" id = "personal-info-icon"></div>
 
                     <h4 class = "section-heading">
                         Personal Information
                     </h4>
 
                     <label id = "name-label">Name<br></label>
-                    <input type = "text" id = "name" class = "text-input" placeholder="Enter Your Name Here" required><br><br>
+                    <input type = "text" id = "name" class = "text-input" placeholder=" " required><br>
 
                     <label id = "email-label">Email<br></label>
-                    <input type = "email" id = "email" class = "text-input" placeholder = "Enter Your E-Mail Here" required><br><br>
+                    <input type = "email" id = "email" class = "text-input" placeholder = " " required><br>
 
                     <label id = "number-label">Phone No.<br></label>
-                    <input type = "number" id = "number" class = "text-input" placeholder = "Enter Your Phone No" min = "999999999" max="9999999999" required><br><br>
+                    <input type = "number" id = "number" class = "text-input" placeholder = " " min = "999999999" max="9999999999" required><br><br>
 
                 </fieldset>
 
@@ -66,7 +66,7 @@
                     <div id = "student-section">
 
                         <label id = "college-label">College<br></label>
-                        <input type = "text" id = "college" class = "text-input" placeholder = "What College Are You In" required><br><br>
+                        <input type = "text" id = "college" class = "text-input" placeholder = " " required><br><br>
 
                         <label id = "dropdown-branch-label">Branch<br></label>
                         <select id = "dropdown-branch">
@@ -97,7 +97,7 @@
                          Qualifications
                     </h4>
 
-                    <label id = "languages-label">What Languages Do You Know?</label><br>
+                    <label id = "languages-label">1. What Languages Do You Know?</label><br>
 
                     <div class = "box-input-container">
 
@@ -113,31 +113,31 @@
                             <input type = "checkbox" id = "custom-checkbox-3" value = "0"/>
                             <label class = "checkbox-label" for = "custom-checkbox-3">Python</label>
                         </div>
-                        <div class = "checkbox-div">
+                        <div class = "checkbox-div java-check-div">
                             <input type = "checkbox" id = "custom-checkbox-4" value = "0"/>
                             <label class = "checkbox-label" for = "custom-checkbox-4">Java</label>
                         </div>
 
-                    </div><br>
+                    </div>
 
-                    <label id = "languages-label">What Language Are You Most Comfortable With?</label><br>
+                    <label id = "languages-label">2. What Language Are You Most Comfortable With?</label><br>
 
-                    <div class = "box-input-container container">
+                    <div class = "box-input-container">
 
                         <div class = "checkbox-div">
-                            <input type = "radio" id = "radio-1" value = "0" name = "c">
+                            <input type = "radio" id = "radio-1" value = "0" name = "c"/>
                             <label class = "checkbox-label" for = "radio-1">C</label>
                         </div>
                         <div class = "checkbox-div">
-                            <input type = "radio" id = "radio-2" value = "0" name = "c">
+                            <input type = "radio" id = "radio-2" value = "0" name = "c"/>
                             <label class = "checkbox-label" for = "radio-2">C++</label>
                         </div>
                         <div class = "checkbox-div">
-                            <input type = "radio" id = "radio-3" value = "0" name = "c">
+                            <input type = "radio" id = "radio-3" value = "0" name = "c"/>
                             <label class = "checkbox-label" for = "radio-3">Python</label>
                         </div>
-                        <div class = "checkbox-div">
-                            <input type = "radio" id = "radio-4" value = "0" name = "c">
+                        <div class = "checkbox-div java-check-div">
+                            <input type = "radio" id = "radio-4" value = "0" name = "c"/>
                             <label class = "checkbox-label" for = "radio-4">Java</label>
                         </div>
 
@@ -162,33 +162,32 @@
 
                 <div id = "buttons" class = "container">
 
-                    <div id = "previous-button" class = "button-div">
-                        <img src = "resources/Buttons/previous.svg" class = "button-img" type = "button" onclick = "previousSection();">
-                        <input type="button" id = "">
+                    <div id = "previous-button" class = "button-div container" onclick = "previousSection();">
+                        <div class = "btn btn-custom">Previous</div>
+                        <input type="button">
                     </div>
 
-                    <div id = "submit-button" class = "button-div">
-                        <img src = "resources/Buttons/submit.svg" class = "button-img" type = "button" onclick = "submitForm();">
+                    <div id = "submit-button" class = "button-div container" onclick = "submitForm();">
+                        <div class = "btn btn-custom">Submit</div>
                         <input type="submit" id = "submit">
                     </div>
 
-                    <div id = "next-button" class = "button-div">
-                        <img src = "resources/Buttons/next.svg" class = "button-img" type = "button" onclick = "nextSection();">
-                        <input type="button" id = "">
+                    <div id = "next-button" class = "button-div container" onclick = "nextSection();">
+                        <div class = "btn btn-custom">Next</div>
+                        <input type="button">
                     </div>
 
                 </div>
 
             </form>
-
         </div>
 
     </body>
 
     <script src = "tests/bundle.js"></script>
     <script src = "bootstrap/jquery-3.5.1.min.js"></script>
+    <script src = "bootstrap/bootstrap.min.js"></script>
     <script src = "main.js"></script>
-
 
 
 </html>
