--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@
 
                 <div id = "buttons" class = "container">
 
-                    <div id = "previous-button" class = "button-div container" onclick = "previousSection();">
-                        <div class = "btn btn-custom">Previous</div>
+                    <div id = "previous-button" class = "button-div container">
+                        <div class = "btn btn-custom" onclick = "previousSection();">Previous</div>
                         <input type="button">
                     </div>
 
-                    <div id = "submit-button" class = "button-div container" onclick = "submitForm();">
-                        <div class = "btn btn-custom">Submit</div>
+                    <div id = "submit-button" class = "button-div container">
+                        <div class = "btn btn-custom" id = "btn-submit" onclick = "nextSection();">Submit</div>
                         <input type="submit" id = "submit">
                     </div>
 
-                    <div id = "next-button" class = "button-div container" onclick = "nextSection();">
-                        <div class = "btn btn-custom">Next</div>
+                    <div id = "next-button" class = "button-div container">
+                        <div class = "btn btn-custom" onclick = "nextSection();">Next</div>
                         <input type="button">
                     </div>
 
